--- a/IpMap/Properties/launchSettings.json
+++ b/IpMap/Properties/launchSettings.json
@@ -20,6 +20,7 @@
     "IpMap": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "ip",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
