--- a/IpMap/IpMap.csproj
+++ b/IpMap/IpMap.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IpData" Version="2.0.1" />
+  </ItemGroup>
+
 
 </Project>
